k8s/helm/releases/kubetail/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubetail
  namespace: kubetail
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kubetail.loeffelmeister.de`)
      kind: Rule
      services:
        - name: kubetail-dashboard
          port: 8080
      middlewares:
        - name: keycloak-forward-auth
          namespace: forward-auth
